nohup.out
start date :  Mon Apr 23 2018 18:32:53 GMT+0800 (CST)
...... detecting environment ......
   commander.host undefined
   commander.port 80
   commander.pidfile undefined
   commander.mode prod
   process.env.PORT undefined
   commander.cpath undefined
   commander.localUserId undefined
...... configuring ......
   server mode prod
   server port 80
/Users/luqianyu/project/IHCI-P/server/api/user.js:5
import lo from 'lodash';
^^^^^^

SyntaxError: Unexpected token import
    at createScript (vm.js:80:10)
    at Object.runInThisContext (vm.js:139:10)
    at Module._compile (module.js:599:28)
    at Object.Module._extensions..js (module.js:646:10)
    at Module.load (module.js:554:32)
    at tryModuleLoad (module.js:497:12)
    at Function.Module._load (module.js:489:3)
    at Module.require (module.js:579:17)
    at require (internal/module.js:11:18)
    at /Users/luqianyu/project/IHCI-P/server/middleware/api/api.js:39:24
    at Array.forEach (<anonymous>)
    at module.exports (/Users/luqianyu/project/IHCI-P/server/middleware/api/api.js:38:14)
    at Object.init (/Users/luqianyu/project/IHCI-P/server/server.js:193:13)
    at Object.<anonymous> (/Users/luqianyu/project/IHCI-P/server/startup.js:244:12)
    at Module._compile (module.js:635:30)
    at Object.Module._extensions..js (module.js:646:10)
start date :  Mon Apr 23 2018 18:33:36 GMT+0800 (CST)
...... detecting environment ......
   commander.host undefined
   commander.port 80
   commander.pidfile undefined
   commander.mode prod
   process.env.PORT undefined
   commander.cpath undefined
   commander.localUserId undefined
...... configuring ......
   server mode prod
   server port 80
/Users/luqianyu/project/IHCI-P/server/api/user.js:5
import lo from 'lodash';
^^^^^^

SyntaxError: Unexpected token import
    at createScript (vm.js:80:10)
    at Object.runInThisContext (vm.js:139:10)
    at Module._compile (module.js:599:28)
    at Object.Module._extensions..js (module.js:646:10)
    at Module.load (module.js:554:32)
    at tryModuleLoad (module.js:497:12)
    at Function.Module._load (module.js:489:3)
    at Module.require (module.js:579:17)
    at require (internal/module.js:11:18)
    at /Users/luqianyu/project/IHCI-P/server/middleware/api/api.js:39:24
    at Array.forEach (<anonymous>)
    at module.exports (/Users/luqianyu/project/IHCI-P/server/middleware/api/api.js:38:14)
    at Object.init (/Users/luqianyu/project/IHCI-P/server/server.js:193:13)
    at Object.<anonymous> (/Users/luqianyu/project/IHCI-P/server/startup.js:244:12)
    at Module._compile (module.js:635:30)
    at Object.Module._extensions..js (module.js:646:10)
